versioned_docs/version-2.4/reference/subsystems/docformatter.mdx
---
title: docformatter
description: |
  The Python docformatter tool (https://github.com/myint/docformatter).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Python docformatter tool (https://github.com/myint/docformatter).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[docformatter]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--docformatter-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_DOCFORMATTER_ARGS'
  toml_repr={`[docformatter]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to docformatter, e.g. `--docformatter-args="--wrap-summaries=100 --pre-summary-newline"`.

</Option>

### `skip`

<Option
  cli_repr={`--[no-]docformatter-skip`}
  env_repr='PANTS_DOCFORMATTER_SKIP'
  toml_repr={`[docformatter]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use docformatter when running `/home/josh/work/scie-pants/dist/pants fmt` and `/home/josh/work/scie-pants/dist/pants lint`.

</Option>

## Advanced options

### `console_script`

<Option
  cli_repr={`--docformatter-console-script=<str>`}
  env_repr='PANTS_DOCFORMATTER_CONSOLE_SCRIPT'
  toml_repr={`[docformatter]
console_script = <str>`}
  default_repr={`docformatter`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--docformatter-entry-point=<str>`}
  env_repr='PANTS_DOCFORMATTER_ENTRY_POINT'
  toml_repr={`[docformatter]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--docformatter-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_DOCFORMATTER_EXTRA_REQUIREMENTS'
  toml_repr={`[docformatter]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--docformatter-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_DOCFORMATTER_INTERPRETER_CONSTRAINTS'
  toml_repr={`[docformatter]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython==2.7.*",\n  "CPython>=3.4,<3.9"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `version`

<Option
  cli_repr={`--docformatter-version=<str>`}
  env_repr='PANTS_DOCFORMATTER_VERSION'
  toml_repr={`[docformatter]
version = <str>`}
  default_repr={`docformatter>=1.3.1,<1.4`}
>

Requirement string for the tool.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
